# task_timetable

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  rebuild_all.sh  run_all_test_configs.sh
.github/workflows/: asan.yml  ci.yml  codeql.yml  doxy.yml  doxy_pages.yml  style.yml  tsan.yml
app/: README.md  eg_ticker.cpp  eg_ticker2.cpp  eg_timeline.cpp  main.cpp
cmake/: Misc.cmake  Warnings.cmake
include/: buffered_worker.h  configurations.h.in  scheduler.h  timeline.h
src/: scheduler.cpp  timeline.cpp
tests/: CMakeLists.txt  dummy.cpp  test_scheduler.cpp  test_timeline.cpp  test_utils.h  test_worker.cpp  unit_tests.cpp
